--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "nexe app.js -t win32-x86-10.16.0 --name purgatory"
   },
   "keywords": [],
   "author": "",
